--- a/OneWeek/Web.config
+++ b/OneWeek/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OneWeek-20160131062735.mdf;Initial Catalog=aspnet-OneWeek-20160131062735;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CounselContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=OneWeek1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -48,6 +48,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="OneWeek.DAL.CounselContext, OneWeek">
+        <databaseInitializer type="OneWeek.DAL.CounselInitializer, OneWeek" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
